agente doble la jaca

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3427,17 +3427,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 154, 184, 202, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 98, 197, 54, 11
   CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 154, 197, 202, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 98, 210, 54, 11
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 154, 210, 202, 11
-  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 98, 223, 54, 11
-  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 154, 223, 202, 11
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 98, 210, 54, 11
+  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 154, 210, 202, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 98, 223, 54, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 154, 223, 202, 11
   CONTROL "", 315, "Edit", WS_BORDER|WS_TABSTOP, 98, 236, 54, 11
   CONTROL "", 316, "Edit", WS_BORDER|WS_TABSTOP, 154, 236, 202, 11
   CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 145, 36, 11
-  CONTROL "", 102, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 145, 36, 11
-  CONTROL "", 101, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 158, 36, 11
-  CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 171, 36, 11
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 184, 36, 11
+  CONTROL "", 102, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 158, 36, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 171, 36, 11
+  CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 184, 36, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 184, 36, 11
   CONTROL "Operar con punto verde", 157, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 198, 89, 10
   CONTROL "Totalizar albaranes", 156, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 211, 73, 10
   CONTROL "No editar sus datos en ventas", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 224, 121, 10
@@ -3456,26 +3456,26 @@ FONT 8, "MS Sans Serif"
   CONTROL "Color", -1, "Static", WS_GROUP, 363, 129, 39, 8
   CONTROL "Móvil 1", -1, "Static", WS_GROUP, 363, 91, 28, 8
   CONTROL "Fax", -1, "Static", WS_GROUP, 363, 117, 13, 8
-  CONTROL "Precio/Comb.", -1, "Static", WS_GROUP, 363, 148, 48, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 363, 148, 25, 8
   CONTROL "Tarifa persnlz.", -1, "Static", WS_GROUP, 47, 149, 48, 8
   CONTROL "Forma pago", -1, "Static", WS_GROUP, 47, 162, 38, 8
   CONTROL "Remesa", -1, "Static", WS_GROUP, 47, 175, 35, 8
   CONTROL "Ruta", -1, "Static", WS_GROUP, 47, 188, 21, 8
   CONTROL "Agente", -1, "Static", WS_GROUP, 47, 200, 24, 8
-  CONTROL "Grupo", -1, "Static", WS_GROUP, 47, 213, 33, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 47, 226, 30, 8
-  CONTROL "Serie ", -1, "Static", WS_GROUP, 363, 174, 22, 8
-  CONTROL "Nº copias", -1, "Static", WS_GROUP, 363, 187, 35, 8
+  CONTROL "Grupo", -1, "Static", WS_GROUP, 47, 226, 33, 8
+  CONTROL "Agente 2", -1, "Static", WS_GROUP, 47, 213, 30, 8
+  CONTROL "Serie/Copias", -1, "Static", WS_GROUP, 363, 187, 45, 8
   CONTROL "1º/2º día pago", -1, "Static", WS_GROUP, 363, 239, 49, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 112
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 139, 316, 110
-  CONTROL "", -1, "Button", BS_GROUPBOX, 362, 139, 130, 110
+  CONTROL "", -1, "Button", BS_GROUPBOX, 360, 139, 132, 110
   CONTROL "Transportista", -1, "Static", WS_GROUP, 47, 239, 46, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos generales del cliente ", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 364, 160, 48, 8
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 364, 174, 40, 8
   CONTROL "Móvil 2", -1, "Static", WS_GROUP, 363, 104, 28, 8
   CONTROL "Teléfono 2", -1, "Static", WS_GROUP, 363, 78, 35, 8
+  CONTROL "Combinado", -1, "Static", WS_GROUP, 363, 161, 41, 8
 }
 
 CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 254
@@ -3802,16 +3802,17 @@ FONT 8, "MS Sans Serif"
 
 CLIENT_3 DIALOG DISCARDABLE 26, 26, 496, 254
 STYLE WS_CHILD|DS_3DLOOK
+CAPTION "ç"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 99, 40, 70, 12
-  CONTROL "", 351, "Edit", WS_BORDER|WS_TABSTOP, 172, 40, 216, 12
-  CONTROL "", 352, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 40, 72, 12
-  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 99, 53, 38, 12
-  CONTROL "", 361, "Edit", WS_BORDER|WS_TABSTOP, 172, 53, 216, 12
-  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 99, 66, 70, 12
-  CONTROL "", 371, "Edit", WS_BORDER|WS_TABSTOP, 172, 66, 216, 12
-  CONTROL "", 372, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 65, 72, 12
+  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 99, 40, 70, 11
+  CONTROL "", 351, "Edit", WS_BORDER|WS_TABSTOP, 172, 40, 216, 11
+  CONTROL "", 352, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 40, 72, 11
+  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 99, 53, 38, 11
+  CONTROL "", 361, "Edit", WS_BORDER|WS_TABSTOP, 172, 53, 216, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 99, 66, 70, 11
+  CONTROL "", 371, "Edit", WS_BORDER|WS_TABSTOP, 172, 66, 216, 11
+  CONTROL "", 372, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 66, 72, 11
   CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 48, 93, 440, 154
   CONTROL "Cuenta venta", -1, "Static", WS_GROUP, 48, 56, 45, 8
   CONTROL "Subcuenta cli.", -1, "Static", WS_GROUP, 48, 43, 48, 8
@@ -3819,7 +3820,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Mayor", -1, "Button", BS_GROUPBOX, 43, 82, 448, 168
   CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 43, 20, 8
   CONTROL "Subcuenta dto.", -1, "Static", WS_GROUP, 48, 69, 49, 8
-  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 68, 20, 8
+  CONTROL "Saldo", -1, "Static", WS_GROUP, 393, 69, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Subcuentas contables de nuestro cliente en contaplus(r).", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
