--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20148,20 +20148,20 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-CLIENTES_FACTURAE DIALOG DISCARDABLE 103, 127, 301, 73
+CLIENTES_FACTURAE DIALOG DISCARDABLE 103, 127, 302, 83
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 97, 4, 200, 11
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 97, 16, 200, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 97, 28, 200, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 97, 40, 200, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 191, 56, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 247, 56, 50, 14
-  CONTROL "Unidad tramitadora", -1, "Static", WS_GROUP, 5, 43, 65, 8
-  CONTROL "Organo gestor", -1, "Static", WS_GROUP, 5, 31, 50, 8
-  CONTROL "Oficina contable", -1, "Static", WS_GROUP, 5, 19, 57, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 97, 17, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 97, 30, 200, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 97, 43, 200, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 192, 59, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 247, 59, 50, 14
+  CONTROL "Oficina contable", -1, "Static", WS_GROUP, 5, 20, 87, 8
   CONTROL "Descripción del organismo", -1, "Static", WS_GROUP, 5, 7, 88, 8
+  CONTROL "Unidad Tramitadora", -1, "Static", WS_GROUP, 5, 46, 87, 8
+  CONTROL "Organo gestor", 4003, "Static", WS_GROUP, 5, 33, 88, 8
 }
 
 ENTIDADES DIALOG DISCARDABLE 145, 79, 329, 253
@@ -20228,10 +20228,9 @@ VIEW_FACTURAS_ENTIDADES DIALOG DISCARDABLE 64, -21, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 30, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 30, 50, 14
+  CONTROL "&Importar [F*]", 500, "Button", WS_TABSTOP, 44, 30, 50, 14
+  CONTROL "&Añadir[F2]", 501, "Button", WS_TABSTOP, 99, 30, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 30, 50, 14
-  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 30, 50, 14
   CONTROL "", 210, "TXBrowse", 0x00200000, 44, 48, 620, 323
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Releción de entidades para faturae", -1, "Static", WS_GROUP, 44, 3, 120, 8
@@ -20538,5 +20537,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ejercicio", -1, "Static", WS_GROUP, 2, 353, 32, 8
   CONTROL "", 200, "msctls_progress32", 0x00000000, 1, 342, 670, 6
   CONTROL "Proceso...", 400, "Static", SS_CENTER|WS_GROUP, 135, 353, 428, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
+
+CLIENTES_FACTURAE_ENTIDAD DIALOG DISCARDABLE 138, 96, 310, 164
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
+CAPTION "Entidad"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 11, 250, 11
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 32, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 32, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 117, 32, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 196, 141, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 250, 141, 50, 14
+  CONTROL "Descripcion", -1, "Static", WS_GROUP, 8, 14, 39, 8
+  CONTROL "", 250, "TXBrowse", WS_TABSTOP|0x00300000, 8, 52, 292, 78
 }
 
