--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -117,3 +117,6 @@ centro_coste_16 BITMAP "..\\bmp\\centro_coste_16.bmp"
 zoom_in_16 BITMAP "..\\bmp\\zoom_in_16.bmp"
 zoom_in_32 BITMAP "..\\bmp\\zoom_in_32.bmp"
 zoom_in_48 BITMAP "..\\bmp\\zoom_in_48.bmp"
+document_attachment_16 BITMAP "..\\bmp\\document_attachment_16.bmp"
+document_attachment_32 BITMAP "..\\bmp\\document_attachment_32.bmp"
+document_attachment_48 BITMAP "..\\bmp\\document_attachment_48.bmp"
