--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3433,7 +3433,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 154, 223, 202, 11
   CONTROL "", 315, "Edit", WS_BORDER|WS_TABSTOP, 98, 236, 54, 11
   CONTROL "", 316, "Edit", WS_BORDER|WS_TABSTOP, 154, 236, 202, 11
-  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 145, 36, 11
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 411, 144, 76, 71
   CONTROL "", 102, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 158, 36, 11
   CONTROL "", 101, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 171, 36, 11
   CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 184, 36, 11
