--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -120,3 +120,9 @@ zoom_in_48 BITMAP "..\\bmp\\zoom_in_48.bmp"
 document_attachment_16 BITMAP "..\\bmp\\document_attachment_16.bmp"
 document_attachment_32 BITMAP "..\\bmp\\document_attachment_32.bmp"
 document_attachment_48 BITMAP "..\\bmp\\document_attachment_48.bmp"
+signpost_48 BITMAP "..\\bmp\\signpost_48.bmp"
+money_48 BITMAP "..\\bmp\\money_48.bmp"
+information2_48 BITMAP "..\\bmp\\information2_48.bmp"
+user_mobilephone_48 BITMAP "..\\bmp\\user_mobilephone_48.bmp"
+form_blue_48 BITMAP "..\\bmp\\form_blue_48.bmp"
+user_48 BITMAP "..\\bmp\\user_48.bmp"
