--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20446,27 +20446,37 @@ FONT 8, "Helv"
   CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
 }
 
-BUSCAR_AVANZADA DIALOG DISCARDABLE 37, 77, 656, 350
+BUSCAR_AVANZADA1024 DIALOG DISCARDABLE 37, 77, 656, 350
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
 CAPTION "Busqueda de articulos..."
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 54, 101, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 151, 54, 130, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 283, 54, 130, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 415, 54, 130, 12
-  CONTROL "Buscar", 200, "Button", WS_TABSTOP, 548, 53, 50, 13
-  CONTROL "Limpiar", 210, "Button", WS_TABSTOP, 598, 53, 50, 13
-  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 50, 84, 598, 240
-  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 598, 333, 50, 14
-  CONTROL "Código", -1, "Static", WS_GROUP, 49, 44, 37, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 151, 44, 41, 8
-  CONTROL "Estado", -1, "Static", WS_GROUP, 283, 44, 41, 8
+  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 49, 50, 110, 134
+  CONTROL "", 160, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 50, 120, 12
+  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 283, 50, 120, 12
+  CONTROL "", 180, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 405, 50, 120, 134
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 79, 110, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 162, 79, 120, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 283, 79, 120, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 405, 79, 120, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 526, 79, 122, 12
+  CONTROL "Buscar [F5]", 200, "Button", WS_TABSTOP, 488, 333, 50, 13
+  CONTROL "Limpiar", 210, "Button", WS_TABSTOP, 543, 333, 50, 13
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 50, 110, 598, 214
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 598, 333, 50, 13
+  CONTROL "Código", -1, "Static", WS_GROUP, 49, 69, 37, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 162, 69, 41, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 283, 69, 41, 8
   CONTROL "Búsqueda avanzada de artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 287, 8
-  CONTROL "Filtros", -1, "Button", BS_GROUPBOX, 43, 29, 610, 42
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 415, 44, 41, 8
-  CONTROL "Resultado", -1, "Button", BS_GROUPBOX, 43, 74, 610, 256
+  CONTROL "Filtros", -1, "Button", BS_GROUPBOX, 43, 29, 610, 66
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 405, 69, 41, 8
+  CONTROL "Resultado", -1, "Button", BS_GROUPBOX, 43, 98, 610, 232
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
+  CONTROL "Fecha inicio", -1, "Static", WS_GROUP, 162, 38, 44, 8
+  CONTROL "Fecha fin", -1, "Static", WS_GROUP, 283, 38, 35, 8
+  CONTROL "Periodo", -1, "Static", WS_GROUP, 49, 38, 38, 8
+  CONTROL "Disponibilidad", -1, "Static", WS_GROUP, 405, 38, 46, 8
+  CONTROL "Operario", -1, "Static", WS_GROUP, 526, 69, 41, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -20511,5 +20521,40 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 250, 141, 50, 14
   CONTROL "Descripcion", -1, "Static", WS_GROUP, 8, 14, 39, 8
   CONTROL "", 250, "TXBrowse", WS_TABSTOP|0x00300000, 8, 52, 292, 78
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+BUSCAR_AVANZADA DIALOG DISCARDABLE 37, 77, 842, 376
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
+CAPTION "Busqueda de articulos..."
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 49, 50, 79, 134
+  CONTROL "", 160, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 131, 50, 60, 12
+  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 193, 50, 60, 12
+  CONTROL "", 180, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 255, 50, 66, 134
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 325, 50, 100, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 427, 50, 100, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 529, 50, 100, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 631, 50, 100, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 733, 50, 100, 12
+  CONTROL "Buscar [F5]", 200, "Button", WS_TABSTOP, 674, 360, 50, 13
+  CONTROL "Limpiar", 210, "Button", WS_TABSTOP, 729, 360, 50, 13
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 50, 82, 783, 271
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 784, 360, 50, 13
+  CONTROL "Código", -1, "Static", WS_GROUP, 325, 40, 37, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 427, 40, 41, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 529, 40, 41, 8
+  CONTROL "Búsqueda avanzada de artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 287, 8
+  CONTROL "Filtros", -1, "Button", BS_GROUPBOX, 43, 29, 796, 41
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 631, 40, 41, 8
+  CONTROL "Resultado", -1, "Button", BS_GROUPBOX, 43, 72, 796, 285
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
+  CONTROL "Fecha inicio", -1, "Static", WS_GROUP, 131, 40, 44, 8
+  CONTROL "Fecha fin", -1, "Static", WS_GROUP, 193, 40, 35, 8
+  CONTROL "Periodo", -1, "Static", WS_GROUP, 49, 40, 38, 8
+  CONTROL "Disponibilidad", -1, "Static", WS_GROUP, 255, 40, 46, 8
+  CONTROL "Operario", -1, "Static", WS_GROUP, 733, 40, 41, 8
 }
 
