--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -375,12 +375,13 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 246, 30, 113, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 199, 11
+  CONTROL "", 172, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 391, 28, 54, 183
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 54, 113, 11
   CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 246, 66, 199, 11
   CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 78, 73, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 321, 78, 124, 12
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 246, 90, 113, 11
-  CONTROL "", 106, "Edit", WS_BORDER, 393, 89, 52, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 321, 78, 124, 11
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 246, 91, 113, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 392, 91, 53, 11
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 246, 103, 73, 11
   CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 321, 103, 124, 11
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 246, 115, 73, 11
@@ -414,8 +415,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Importar tarifa", 527, "Button", WS_TABSTOP, 483, 129, 50, 14
   CONTROL "", 240, "TXBrowse", WS_TABSTOP|0x00300000, 44, 145, 622, 139
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 154, 61
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 393, 30, 52, 11
-  CONTROL "", 173, "Edit", ES_RIGHT|WS_BORDER, 393, 54, 52, 11
+  CONTROL "", 173, "Edit", ES_RIGHT|WS_BORDER, 391, 54, 54, 11
   CONTROL "", 231, "TBitMap", 0x00800000, 534, 114, 16, 11
   CONTROL "", 249, "Edit", WS_BORDER|WS_TABSTOP, 47, 297, 79, 11
   CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 297, 50, 11
@@ -7004,7 +7004,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 149, 64
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 223, 30, 124, 11
-  CONTROL "", 171, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 385, 30, 58, 11
+  CONTROL "", 171, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 385, 28, 59, 100
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 223, 42, 220, 11
   CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 223, 54, 124, 11
   CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 385, 54, 58, 11
@@ -15303,7 +15303,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 287, 152, 61
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 231, 30, 110, 11
-  CONTROL "", 132, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 30, 60, 11
+  CONTROL "", 132, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 381, 28, 60, 185
   CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 231, 42, 210, 11
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 231, 54, 110, 11
   CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 381, 54, 60, 11
@@ -15747,7 +15747,7 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 225, 30, 100, 11
-  CONTROL "", 132, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 362, 30, 70, 11
+  CONTROL "", 132, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 362, 28, 69, 184
   CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 225, 42, 207, 11
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 54, 100, 11
   CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 362, 54, 70, 11
@@ -17559,30 +17559,30 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 219, 30, 95, 11
   CONTROL "", 341, "TBtnBmp", 0x00000000, 315, 30, 12, 11
-  CONTROL "", 132, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 362, 30, 70, 11
+  CONTROL "", 132, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 361, 28, 70, 186
   CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 219, 42, 212, 11
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 219, 54, 95, 11
-  CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 362, 54, 70, 11
+  CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 361, 54, 70, 11
   CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 219, 66, 212, 11
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 219, 78, 66, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 287, 78, 145, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 219, 78, 68, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 289, 78, 142, 11
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 219, 90, 95, 11
-  CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 70, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 219, 102, 75, 11
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 296, 102, 136, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 219, 114, 76, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 296, 114, 136, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 465, 30, 70, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 361, 90, 70, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 219, 102, 68, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 289, 102, 142, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 219, 114, 68, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 289, 114, 142, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 467, 30, 68, 11
   CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 536, 30, 126, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 465, 42, 70, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 467, 42, 68, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 536, 42, 126, 11
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 465, 54, 70, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 467, 54, 68, 11
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 536, 54, 126, 11
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 465, 66, 70, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 467, 66, 68, 11
   CONTROL "", 183, "Edit", ES_RIGHT|WS_BORDER, 536, 66, 126, 11
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 465, 78, 70, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 467, 78, 68, 11
   CONTROL "", 186, "Edit", WS_BORDER|WS_TABSTOP, 536, 78, 126, 11
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 465, 90, 52, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 467, 90, 50, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 130, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 130, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 130, 50, 14
@@ -17633,7 +17633,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Divisa", -1, "Static", WS_GROUP, 432, 93, 28, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 332, 33, 26, 8
   CONTROL "Riesgo", -1, "Static", WS_GROUP, 332, 57, 26, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 332, 93, 31, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 330, 93, 31, 8
   CONTROL "Tarifa per.", -1, "Static", WS_GROUP, 432, 33, 28, 8
   CONTROL "Dirección", -1, "Static", WS_GROUP, 173, 105, 46, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 173, 117, 46, 8
@@ -17661,10 +17661,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "S.A.T. de clientes", -1, "Static", WS_GROUP, 44, 4, 120, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 25, 8
   CONTROL "Situación ", -1, "Static", WS_GROUP, 44, 81, 31, 8
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 465, 102, 70, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 467, 102, 68, 11
   CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 536, 102, 126, 11
   CONTROL "Operario", -1, "Static", WS_GROUP, 432, 105, 28, 8
-  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 465, 114, 70, 11
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 467, 114, 68, 11
   CONTROL "", 351, "Edit", WS_BORDER, 536, 114, 110, 11
   CONTROL "Estado art.", -1, "Static", WS_GROUP, 432, 117, 34, 8
   CONTROL "", 352, "TBitMap", 0x00800000, 648, 114, 14, 11
