--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5913,14 +5913,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 530, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 102, 50, 84
   CONTROL "Tarifa 6", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 115, 37, 11
   CONTROL "", 610, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 115, 232, 12
-  CONTROL "", 620, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 114, 42, 12
+  CONTROL "", 620, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 115, 42, 12
   CONTROL "", 630, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 114, 50, 84
-  CONTROL "", 800, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 127, 42, 12
-  CONTROL "", 810, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 140, 42, 12
-  CONTROL "", 740, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 127, 42, 12
-  CONTROL "", 750, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 140, 42, 12
+  CONTROL "", 800, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 135, 128, 69, 85
+  CONTROL "", 810, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 135, 142, 69, 84
+  CONTROL "", 740, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 329, 128, 69, 85
+  CONTROL "", 750, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 329, 142, 69, 85
   CONTROL "Habilitar cajas", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 181, 57, 10
-  CONTROL "Cajas en cálculos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 60, 192, 69, 10
+  CONTROL "Cajas en cálculos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 192, 69, 10
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 244, 180, 179, 12
   CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 244, 193, 179, 12
   CONTROL "Mostrar ventana de stocks en artículos", 770, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 222, 137, 10
@@ -5949,7 +5949,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Visible", -1, "Static", WS_GROUP, 50, 40, 30, 8
   CONTROL "Precio del producto para táctil", -1, "Static", WS_GROUP, 217, 130, 97, 8
   CONTROL "Precio del combinado para táctil", -1, "Static", WS_GROUP, 217, 143, 104, 8
-  CONTROL "Precio por defecto", -1, "Static", WS_GROUP, 50, 130, 97, 8
+  CONTROL "Precio por defecto", -1, "Static", WS_GROUP, 50, 130, 80, 8
   CONTROL "Precio Web por defecto", -1, "Static", WS_GROUP, 50, 143, 97, 8
   CONTROL "Stocks", -1, "Button", BS_GROUPBOX, 44, 211, 386, 52
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -5958,7 +5958,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Texto para unidades", -1, "Static", WS_GROUP, 162, 194, 70, 8
   CONTROL "Utilización de cajas", -1, "Button", BS_GROUPBOX, 44, 158, 386, 52
   CONTROL "Busquedas en caso de conflicto en compras", -1, "Button", BS_GROUPBOX, 44, 267, 149, 51
-  CONTROL "Habilitar bultos", 450, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 169, 61, 10
+  CONTROL "Habilitar bultos", 450, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 169, 61, 10
   CONTROL "Texto para bultos", -1, "Static", WS_GROUP, 162, 171, 70, 8
   CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 244, 167, 179, 12
 }
