mostrar el motivo del bloqueo del cliente

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3828,16 +3828,11 @@ CLIENT_4 DIALOG DISCARDABLE 32, 32, 496, 254
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 450, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 78, 40, 76, 12
-  CONTROL "", 460, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 78, 54, 76, 133
-  CONTROL "", 370, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 84, 438, 152
-  CONTROL "Mostrar comentario en documentos de venta", 380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 238, 154, 10
-  CONTROL "Comentario", -1, "Button", BS_GROUPBOX, 44, 73, 447, 178
+  CONTROL "", 370, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 52, 438, 195
+  CONTROL "Mostrar comentario", 380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 39, 75, 10
+  CONTROL "Comentario", -1, "Button", BS_GROUPBOX, 44, 29, 447, 222
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Comentarios a mostar al realizar un documento de ventas y campos definidos por el usuario de la aplicación.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Estadísticas", -1, "Button", BS_GROUPBOX, 44, 29, 447, 42
-  CONTROL "Nacido", -1, "Static", WS_GROUP, 49, 43, 28, 8
-  CONTROL "Sexo", -1, "Static", WS_GROUP, 49, 58, 21, 8
+  CONTROL "Comentarios a mostar al realizar un documento.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
 CLIENT_5 DIALOG DISCARDABLE 32, 32, 496, 254
@@ -14990,14 +14985,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Unidades", 221, "Button", BS_AUTORADIOBUTTON, 55, 184, 43, 10
   CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 187, 183, 60, 12
   CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 169, 63, 81, 85
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 55, 77, 27, 8
+  CONTROL "Precio 1", 300, "Static", WS_GROUP, 55, 77, 27, 8
   CONTROL "A vender", -1, "Static", WS_GROUP, 143, 174, 31, 8
   CONTROL "A cobrar", -1, "Static", WS_GROUP, 143, 186, 30, 8
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 55, 89, 30, 8
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 55, 101, 32, 8
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 55, 113, 31, 8
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 55, 125, 31, 8
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 55, 137, 32, 8
+  CONTROL "Precio 2", 301, "Static", WS_GROUP, 55, 89, 30, 8
+  CONTROL "Precio 3", 302, "Static", WS_GROUP, 55, 101, 32, 8
+  CONTROL "Precio 4", 303, "Static", WS_GROUP, 55, 113, 31, 8
+  CONTROL "Precio 5", 304, "Static", WS_GROUP, 55, 125, 31, 8
+  CONTROL "Precio 6", 305, "Static", WS_GROUP, 55, 137, 32, 8
   CONTROL "Lineal", -1, "Static", WS_GROUP, 254, 87, 21, 8
   CONTROL "Porcentual", -1, "Static", WS_GROUP, 254, 75, 36, 8
   CONTROL "Descuentos", -1, "Button", BS_GROUPBOX, 251, 63, 125, 85
