--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1626,7 +1626,7 @@ FONT 8, "MS Sans Serif"
 }
 
 ARTICULO DIALOG DISCARDABLE 85, -95, 576, 339
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_MINIMIZEBOX|WS_VISIBLE
 CAPTION "Artículos"
 FONT 8, "MS Sans Serif"
 {
