teclas control-D y control-B

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1929,20 +1929,20 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-ASS_PEDCLI DIALOG DISCARDABLE 99, 49, 434, 251
+ASS_PEDCLI DIALOG DISCARDABLE 99, 49, 434, 316
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generar pedidos a proveedores"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "TPages", 110, "TPages", WS_TABSTOP, 5, 39, 426, 192
-  CONTROL "< &Anterior", 401, "Button", WS_TABSTOP, 212, 234, 80, 14
-  CONTROL "Siguien&te >", 402, "Button", WS_TABSTOP, 297, 234, 80, 14
-  CONTROL "&Cancelar", 403, "Button", WS_TABSTOP, 381, 234, 50, 14
+  CONTROL "TPages", 110, "TPages", WS_TABSTOP, 5, 39, 426, 256
+  CONTROL "< &Anterior", 401, "Button", WS_TABSTOP, 212, 298, 80, 14
+  CONTROL "Siguien&te >", 402, "Button", WS_TABSTOP, 297, 298, 80, 14
+  CONTROL "&Cancelar", 403, "Button", WS_TABSTOP, 381, 298, 50, 14
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 434, 34
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 434, 1
 }
 
-ASS_PEDCLI1 DIALOG DISCARDABLE 88, 53, 394, 194
+ASS_PEDCLI1 DIALOG DISCARDABLE 88, 53, 394, 262
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -1954,52 +1954,66 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 130, 44, 254, 10
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 56, 80, 10
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 130, 56, 254, 10
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 78, 55, 10
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 130, 78, 254, 10
-  CONTROL "Menor que 0", 201, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 104, 55, 12
-  CONTROL "Menor o igual que 0", 202, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 118, 79, 12
-  CONTROL "Menor que stock minimo", 203, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 132, 90, 12
-  CONTROL "Todos los artículos del pedido", 204, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 146, 110, 12
-  CONTROL "Stock mínimo", 212, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 104, 55, 12
-  CONTROL "Stock máximo", 213, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 118, 56, 12
-  CONTROL "Cant. pedido cliente", 214, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 132, 79, 12
-  CONTROL "", 220, "msctls_progress32", 0x00000000, 49, 174, 336, 10
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 49, 149, 55, 10
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 130, 149, 254, 10
+  CONTROL "Menor que 0", 201, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 175, 55, 12
+  CONTROL "Menor o igual que 0", 202, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 189, 79, 12
+  CONTROL "Menor que stock minimo", 203, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 203, 90, 12
+  CONTROL "Todos los artículos del pedido", 204, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 49, 217, 110, 12
+  CONTROL "Stock mínimo", 212, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 175, 55, 12
+  CONTROL "Stock máximo", 213, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 189, 56, 12
+  CONTROL "Cant. pedido cliente", 214, "Button", BS_AUTORADIOBUTTON|WS_TABSTOP, 245, 203, 79, 12
+  CONTROL "", 220, "msctls_progress32", 0x00000000, 49, 243, 336, 10
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 12, 35, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 24, 35, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 9, 47, 26, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 59, 25, 8
-  CONTROL "Destino", -1, "Static", WS_GROUP, 9, 81, 26, 8
+  CONTROL "Destino", -1, "Static", WS_GROUP, 9, 151, 26, 8
   CONTROL "Proveedores", -1, "Button", BS_GROUPBOX, 3, 0, 386, 36
   CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 3, 36, 386, 34
-  CONTROL "Almacén", -1, "Button", BS_GROUPBOX, 3, 70, 386, 23
-  CONTROL "Stock disponible", -1, "Button", BS_GROUPBOX, 3, 93, 192, 71
-  CONTROL "Igualar stock a", -1, "Button", BS_GROUPBOX, 197, 93, 192, 71
-  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 166, 386, 22
+  CONTROL "Almacén", -1, "Button", BS_GROUPBOX, 3, 140, 386, 23
+  CONTROL "Stock disponible", -1, "Button", BS_GROUPBOX, 3, 164, 192, 71
+  CONTROL "Igualar stock a", -1, "Button", BS_GROUPBOX, 197, 164, 192, 71
+  CONTROL "", -1, "Button", BS_GROUPBOX, 3, 235, 386, 22
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 49, 79, 80, 10
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 130, 79, 254, 10
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 49, 91, 80, 10
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 130, 91, 254, 10
+  CONTROL "Desde", -1, "Static", WS_GROUP, 9, 82, 26, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 94, 25, 8
+  CONTROL "Categorías", -1, "Button", BS_GROUPBOX, 4, 71, 386, 34
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 49, 114, 80, 10
+  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 130, 114, 254, 10
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 49, 126, 80, 10
+  CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 130, 126, 254, 10
+  CONTROL "Desde", -1, "Static", WS_GROUP, 9, 117, 26, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 129, 25, 8
+  CONTROL "Temporadas", -1, "Button", BS_GROUPBOX, 4, 106, 386, 34
 }
 
-ASS_PEDCLI2 DIALOG DISCARDABLE 132, 67, 426, 194
+ASS_PEDCLI2 DIALOG DISCARDABLE 132, 67, 426, 262
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 8, 28, 410, 160
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 8, 28, 410, 227
   CONTROL "&Modificar", 110, "Button", WS_TABSTOP, 8, 12, 50, 14
   CONTROL "&Seleccionar", 120, "Button", WS_TABSTOP, 60, 12, 50, 14
   CONTROL "&Todos", 130, "Button", WS_TABSTOP, 112, 12, 50, 14
   CONTROL "&Ninguno", 140, "Button", WS_TABSTOP, 164, 12, 50, 14
-  CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 3, 0, 420, 192
+  CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 3, 0, 420, 259
 }
 
-ASS_PEDCLI3 DIALOG DISCARDABLE 102, 64, 426, 169
+ASS_PEDCLI3 DIALOG DISCARDABLE 102, 64, 426, 262
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Informe", -1, "Button", BS_GROUPBOX, 3, 0, 420, 169
+  CONTROL "Informe", -1, "Button", BS_GROUPBOX, 3, 0, 420, 259
   CONTROL "&Modificar", 110, "Button", WS_TABSTOP, 370, 10, 50, 14
   CONTROL "&Zoom", 120, "Button", WS_TABSTOP, 370, 25, 50, 14
   CONTROL "&Eliminar", 130, "Button", WS_TABSTOP, 370, 40, 50, 14
   CONTROL "&Visualizar", 140, "Button", WS_TABSTOP, 370, 55, 50, 14
   CONTROL "&Imprimir", 150, "Button", WS_TABSTOP, 370, 70, 50, 14
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 8, 10, 360, 157
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 8, 10, 360, 244
 }
 
 ASS_PEDPRV1 DIALOG DISCARDABLE 88, 53, 394, 194
@@ -8030,42 +8044,46 @@ FONT 12, "MS Sans Serif"
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 1, 2, 227, 27
 }
 
-HELPENTRYDUP DIALOG DISCARDABLE 141, -5, 440, 319
+HELPENTRYDUP DIALOG DISCARDABLE 141, -5, 483, 348
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 7, 13, 278, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 32, 373, 265
-  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 294, 13, 77, 138
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 300, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 106, 300, 50, 14
-  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 291, 2, 84, 27
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 273, 300, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 325, 300, 50, 14
-  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 1, 2, 289, 27
-  CONTROL "D&uplicar", 502, "Button", WS_TABSTOP, 54, 300, 50, 14
-  CONTROL "", 300, "TBitmap", 0x00000000, 377, 5, 60, 62, 0x00020000
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 50, 45, 278, 12
+  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 45, 64, 373, 265
+  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 337, 45, 77, 138
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 45, 332, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 149, 332, 50, 14
+  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 334, 34, 84, 27
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 316, 332, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 368, 332, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 44, 34, 289, 27
+  CONTROL "D&uplicar", 502, "Button", WS_TABSTOP, 97, 332, 50, 14
+  CONTROL "", 300, "TBitmap", 0x00000000, 420, 37, 60, 62, 0x00020000
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Información relacionada con artículos", 4001, "Static", SS_LEFTNOWORDWRAP, 44, 3, 435, 8
 }
 
-HELPENTRYDUPSTK DIALOG DISCARDABLE 141, -5, 492, 319
+HELPENTRYDUPSTK DIALOG DISCARDABLE 141, -5, 536, 349
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 7, 13, 330, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 32, 425, 168
-  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 347, 13, 77, 138
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 299, 50, 14
-  CONTROL "D&uplicar", 502, "Button", WS_TABSTOP, 54, 299, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 106, 299, 50, 14
-  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 343, 2, 84, 27
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 323, 299, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 377, 299, 50, 14
-  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 1, 2, 340, 27
-  CONTROL "", 300, "TBitmap", 0x00000000, 430, 6, 60, 62, 0x00020000
-  CONTROL "", 320, "TXBrowse", 0x00200000, 2, 203, 425, 90
-  CONTROL "Aceptar con propiedades [F6]", 550, "Button", WS_TABSTOP, 219, 299, 100, 14
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 50, 45, 330, 12
+  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 45, 64, 425, 168
+  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 390, 45, 77, 138
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 45, 331, 50, 14
+  CONTROL "D&uplicar", 502, "Button", WS_TABSTOP, 97, 331, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 149, 331, 50, 14
+  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 386, 34, 84, 27
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 366, 331, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 420, 331, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 44, 34, 340, 27
+  CONTROL "", 300, "TBitmap", 0x00000000, 473, 38, 60, 62, 0x00020000
+  CONTROL "", 320, "TXBrowse", 0x00200000, 45, 235, 425, 90
+  CONTROL "Aceptar con propiedades [F6]", 550, "Button", WS_TABSTOP, 262, 331, 100, 14
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Información relacionada con artículos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 487, 8
 }
 
 HELPENTRYPRV DIALOG DISCARDABLE 141, -5, 600, 396
@@ -20552,5 +20570,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "Periodo", -1, "Static", WS_GROUP, 49, 40, 38, 8
   CONTROL "Disponibilidad", -1, "Static", WS_GROUP, 255, 40, 46, 8
   CONTROL "Operario", -1, "Static", WS_GROUP, 733, 40, 41, 8
+}
+
+HELPENTRYIMAGE DIALOG DISCARDABLE 141, -5, 600, 362
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Ayuda a la entrada"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 49, 46, 409, 12
+  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 43, 67, 552, 274
+  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 478, 46, 110, 138
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 42, 345, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 97, 345, 50, 14
+  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 473, 34, 122, 31
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 490, 345, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 545, 345, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 44, 34, 420, 31
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Información relacionada con el cliente", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 410, 8
 }
 
