--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12036,71 +12036,73 @@ FONT 8, "MS Sans Serif"
   CONTROL "Centro de coste", -1, "Static", WS_GROUP, 132, 206, 50, 8
 }
 
-LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
+LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 396
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Imp. incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 12, 60, 10
-  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 10, 28, 12
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 91, 33, 91, 12
-  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 59, 10, 12
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 59, 38, 12
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 59, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 59, 70, 12
-  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 280, 59, 70, 12
-  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 73, 10, 12
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 73, 38, 12
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 73, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 73, 70, 12
-  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 73, 70, 12
-  CONTROL "", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 87, 10, 12
-  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 87, 38, 12
-  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 87, 49, 33
-  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 87, 70, 12
-  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 87, 70, 12
-  CONTROL "", 650, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 101, 10, 12
-  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 101, 38, 12
-  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 101, 49, 33
-  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 101, 70, 12
-  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 101, 70, 12
-  CONTROL "", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 115, 10, 12
-  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 115, 38, 12
-  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 115, 49, 33
-  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 115, 70, 12
-  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 115, 70, 12
-  CONTROL "", 750, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 129, 10, 12
-  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 129, 38, 12
-  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 129, 49, 33
-  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 129, 70, 12
-  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 129, 70, 12
-  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 147, 130, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 7, 173, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 185, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 197, 71, 10
-  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 210, 60, 12
-  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 153, 210, 40, 12
-  CONTROL "Línea facturada", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 196, 12, 64, 10
-  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 184, 24
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 25, 352, 136
-  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 8, 36, 65, 8
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 61, 30, 10
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 75, 30, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 89, 30, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 103, 30, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 117, 30, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 131, 30, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 47, 49, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 190, 49, 82, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 274, 49, 82, 96
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 61, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 75, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 89, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 103, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 117, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 131, 23, 10
-  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 162, 352, 64
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 7, 212, 60, 10
-  CONTROL "", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 190, 1, 165, 24
+  CONTROL "Impuesto incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 12, 77, 10
+  CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 10, 28, 11
+  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 34, 130, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 7, 62, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 74, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 86, 71, 10
+  CONTROL "", 370, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 99, 60, 12
+  CONTROL "", 371, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 153, 99, 40, 12
+  CONTROL "Línea facturada", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 7, 124, 64, 10
+  CONTROL "", 361, "Edit", WS_BORDER|WS_GROUP, 91, 123, 91, 12
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 90, 262, 91, 12
+  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 75, 288, 10, 12
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 288, 38, 12
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 288, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 288, 70, 12
+  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 288, 70, 12
+  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX, 75, 302, 10, 12
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 302, 38, 12
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 302, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 302, 70, 12
+  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 302, 70, 12
+  CONTROL "", 600, "Button", BS_AUTOCHECKBOX, 75, 316, 10, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 316, 38, 12
+  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 316, 49, 33
+  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 316, 70, 12
+  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 316, 70, 12
+  CONTROL "", 650, "Button", BS_AUTOCHECKBOX, 75, 330, 10, 12
+  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 90, 330, 38, 12
+  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 330, 49, 33
+  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 330, 70, 12
+  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 330, 70, 12
+  CONTROL "", 700, "Button", BS_AUTOCHECKBOX, 75, 344, 10, 12
+  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 344, 38, 12
+  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 344, 49, 33
+  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 344, 70, 12
+  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 279, 344, 70, 12
+  CONTROL "", 750, "Button", BS_AUTOCHECKBOX, 75, 358, 10, 12
+  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 358, 38, 12
+  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 358, 49, 33
+  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 358, 70, 12
+  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 358, 70, 12
+  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 352, 24
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 254, 352, 136
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 7, 265, 65, 8
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 7, 290, 30, 10
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 7, 304, 30, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 7, 318, 30, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 7, 332, 30, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 7, 346, 30, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 7, 360, 30, 10
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 46, 278, 139, 96
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 189, 278, 82, 96
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 273, 278, 82, 96
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 290, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 304, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 318, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 332, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 346, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 52, 360, 23, 10
+  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 51, 352, 64
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 7, 101, 60, 10
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 27, 352, 21
+  CONTROL "", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 117, 352, 21
 }
 
 LALBPRV_3 DIALOG DISCARDABLE 26, 35, 360, 261
